2001-10-06  Mike Kestner <mkestner@speakeasy.net>

	* gtk/Button.cs : Implemented 3 constructors, 5 methods, 4 properties,
	and 6 signals.  Button API is 100% implemented.  Need to implement
	some Container methods to be able to complete testing.

2001-10-05  Mike Kestner <mkestner@speakeasy.net>

	* defs-parse.pl : A little automation for the binding.  The enums and 
	flags can be painlessly generated from defs files. 
	* gtk/makefile : use defs-parse.pl to produce generated.cs.
	* gtk/.cvsignore : hush generated.cs
	* gtk/gtk.defs : unceremoniously ripped from gtk+ HEAD.
	* gtk/Window.cs : Killed the WindowType enum which is now generated.
	
2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* glib/SimpleSignal.cs : Reworked to parallel SimpleEvent.

2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* gtk/Widget.cs : Implemented all the bool, string, and int props.

2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* gdk/SimpleEvent.cs : Temporarily uncomment the GCHandle code until
	a layout is ready and exceptions can be avoided.
	* gtk/Widget.cs : Killed all the signal and event attaching methods. 
	They never belonged here, and now they exist in the SimpleEvent.
	Add a Signals hash to hold refs of the Signal handlers. Killed default
	ctor and the dtor.  The event Add/Remove methods now create a 
	SimpleEvent, stuff it in the hash, and remove it when the last handler
	disappears.

2001-10-04  Mike Kestner <mkestner@speakeasy.net>

	* HACKING : Little bit of cleanup.
	* gdk/SimpleEvent.cs : Redesigned a bit. Docs.  Replaced refcounting 
	mechanism with an instance hash and added ctor/dtor.  This class
	now completely encapsulates the signal attachment and forwarding 
	mechanism for GdkEvent based signals.  It attaches to the raw signal, 
	maintains a ref to the associated event handler, and uses the static 
	callback to activate the event handler on signal receipt.
	* sample/makefile : killed one last CSC explicit reference. 
