@@ -1,3 +1,15 @@
+2001-10-07  Mike Kestner <mkestner@speakeasy.net>
+
+	* glib/Object.cs : Added public Handle property.  It would be nice
+	if I could make the RawObject public for get and protected for set, 
+	but that doesn't appear to be possible with C# properties.
+	* gtk/Container.cs : New class with 2 of the 3 props and the Add/Remove
+	methods only implemented.
+	* gtk/Widget.cs : Added SizeRequest prop which is a combination of
+	HeightRequest and SizeRequest. Embrace and extend gtk...
+	* gtk/Window.cs : Derive from newly added Container subclass.
+	* sample/ButtonApp.cs : Simple tire-kicking app.
+
 2001-10-06  Mike Kestner <mkestner@speakeasy.net>
 
 	* gtk/Button.cs : Implemented 3 constructors, 5 methods, 4 properties,
